--- a/_config.yml
+++ b/_config.yml
@@ -4,10 +4,10 @@
 
 url: http://mnapoli.github.io
 title: Matthieu Napoli
-subtitle: Portfolio and technical blog
+subtitle: Random thoughts and experiments about web development and programming
 author: Matthieu Napoli
 simple_search: http://google.com/search
-description: Portfolio and technical blog
+description: Random thoughts and experiments about web development and programming
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
 # You can customize the format as defined in
@@ -32,7 +32,7 @@ source: source
 destination: public
 plugins: plugins
 code_dir: downloads/code
-category_dir: blog/categories
+category_dir: categories
 markdown: rdiscount
 rdiscount:
   extensions:
