--- a/_config.yml
+++ b/_config.yml
@@ -90,11 +90,11 @@ delicious_user:
 delicious_count: 3
 
 # Disqus Comments
-disqus_short_name: mnapoli
+disqus_short_name: mnapoli-blog
 disqus_show_comment_count: true
 
 # Google Analytics
-google_analytics_tracking_id:
+google_analytics_tracking_id: UA-15584647-1
 
 # Facebook Like
 facebook_like: false
