--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://mnapoli.github.io
+url: http://mnapoli.fr
 title: Matthieu Napoli
 subtitle: Random thoughts and experiments about web development and programming
 author: Matthieu Napoli
