--- a/_config.yml
+++ b/_config.yml
@@ -108,7 +108,7 @@ navigation:
   url: /
 - text: Projects
   url: /projects/
-- text: Presentations
+- text: Talks
   url: /presentations/
 - text: Blog archives
   url: /archives/
