--- a/_config.yml
+++ b/_config.yml
@@ -4,10 +4,10 @@
 
 url: http://mnapoli.fr
 title: Matthieu Napoli
-subtitle: Random thoughts and experiments about web development and programming
+subtitle: Thoughts and experiments about web development and programming
 author: Matthieu Napoli
 simple_search: http://google.com/search
-description: Random thoughts and experiments about web development and programming
+description: Thoughts and experiments about web development and programming
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
 # You can customize the format as defined in
