Upgrade to Bref 0.4

--- a/composer.json
+++ b/composer.json
@@ -2,13 +2,13 @@
     "type": "project",
     "license": "proprietary",
     "require": {
-        "php": "^7.2.0",
+        "php": "^7.3.0",
         "ext-ctype": "*",
         "ext-iconv": "*",
         "aptoma/twig-markdown": "^3.0",
         "debril/feed-io": "^4.3",
         "league/commonmark": "^0.17.5",
-        "mnapoli/bref": "^0.2.27",
+        "mnapoli/bref": "~0.4.1",
         "mnapoli/front-yaml": "^1.6",
         "sensio/framework-extra-bundle": "^5.2",
         "symfony/console": "^4.1",
