--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 _site
-/.bref/
+/.serverless/
 
 ###> symfony/framework-bundle ###
-/.env
+/.env.local
+/.env.local.php
+/.env.*.local
 /public/bundles/
 /var/
 /vendor/
