--- a/serverless.yml
+++ b/serverless.yml
@@ -12,6 +12,7 @@ provider:
 package:
     exclude:
         - 'assets/**'
+        - 'drafts/**'
         - 'node_modules/**'
         - 'public/assets/fonts/**'
         - 'public/assets/images/**'
@@ -24,14 +25,15 @@ functions:
     main:
         handler: public/index.php
         description: 'mnapoli.fr'
-        timeout: 30 # in seconds (API Gateway has a timeout of 30 seconds)
+        timeout: 28 # in seconds (API Gateway has a timeout of 29 seconds)
         layers:
-            - 'arn:aws:lambda:us-east-1:209497400698:layer:php-73-fpm:7'
+            - ${bref:layer.php-73-fpm}
         events:
             -   http: 'ANY /'
             -   http: 'ANY {proxy+}'
 
 plugins:
+    - ./vendor/bref/bref
     - serverless-finch
 
 custom:
