--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,10 @@
         "symfony/framework-bundle": "^4.1",
         "symfony/twig-bundle": "^4.1",
         "symfony/webpack-encore-pack": "^1.0",
-        "symfony/yaml": "^4.1"
+        "symfony/yaml": "^4.1",
+        "symfony/dotenv": "^4.1"
     },
     "require-dev": {
-        "symfony/dotenv": "^4.1",
         "symfony/maker-bundle": "^1.7",
         "symfony/web-server-bundle": "^4.1"
     },
