--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,10 @@ _site
 npm-debug.log
 yarn-error.log
 ###< symfony/webpack-encore-pack ###
+
+###> symfony/webpack-encore-bundle ###
+/node_modules/
+/public/build/
+npm-debug.log
+yarn-error.log
+###< symfony/webpack-encore-bundle ###
