--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "sass-loader": "^12",
     "serverless-finch": "^2.3.2",
     "webpack-notifier": "^1.7.0"
+  },
+  "devDependencies": {
+    "serverless": "^2.72.3"
   }
 }
