--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
                 with:
                     php-version: '8.2'
                     coverage: none
-                    tools: bref/cli:dev-main
+                    tools: bref/cli:^1
 
             -   uses: ramsey/composer-install@v1
                 with:
