--- a/package.json
+++ b/package.json
@@ -18,5 +18,6 @@
     "@tailwindcss/typography": "^0.5.9",
     "highlight.js": "^10.1.2",
     "tailwindcss": "^3.3.1"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
